# mu_rust_hid

./: .git-blame-ignore-revs  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  cspell.json  rust-toolchain.toml
.azurepipelines/: BuildAndTest.yml
.github/workflows/: publish-release.yml
examples/: hidparse.rs
examples/samples/: cfu.txt  sample1.txt
hid_report_descriptor_parser/: Cargo.toml
hid_report_descriptor_parser/src/: item_tokenizer.rs  lib.rs  report_data_types.rs  report_descriptor_parser.rs
hidparse/: Cargo.toml
hidparse/samples/: boot_keyboard.txt  digitizer.txt
hidparse/src/: main.rs
hidparser/: Cargo.toml
hidparser/src/: item_tokenizer.rs  lib.rs  report_data_types.rs  report_descriptor_parser.rs  utils.rs
src/: item_tokenizer.rs  lib.rs  main.rs  report_data_types.rs  report_descriptor_parser.rs  utils.rs
