[package]
name = "hidparser"
version = "0.2.0"
edition = "2021"
license = "BSD-2-Clause-Patent"
description = "HID report descriptor parsing library"
repository = "https://github.com/microsoft/mu_rust_hid"
keywords = ["hid"]
categories = ["no-std", "parser-implementations"]

[features]
default = []
std = []

[dev-dependencies]
clap = { version = "4.3.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"